--- a/.env.development
+++ b/.env.development
@@ -2,8 +2,8 @@ SESSION_COOKIE_NAME=sid
 SESSION_PASSWORD=oqzo2ojtOrEbP6lEXXsgzIU9PhxcRbUu
 
 DATABASE_TYPE=mysql
-DATABASE_HOST=47.99.111.155
+DATABASE_HOST=localhost
 DATABASE_PORT=3306
-DATABASE_USERNAME=1872764995
-DATABASE_PASSWORD=WJTand958.
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=root
 DATABASE_NAME=myblog
